ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plotlisting-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.priority: "1"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /grafana/
        pathType: Prefix
        backend:
          service:
            name: grafana-service
            port:
              number: 3000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: metabase-ingress-route
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/metabase`)
      kind: Rule
      services:
        - name: metabase-service
          port: 3000
      middlewares:
        - name: metabase-stripprefix
